fixed spacing
fixed spacing on heading and paragraph

--- a/css/main.css
+++ b/css/main.css
@@ -60,13 +60,13 @@ figcaption {
     width: 33%;
 }
 
-h1 {
-	font-size: 1.25rem;
-	padding-left: 1rem;
-}
-
 .border-right {
 	border-right: 1px solid #CCC;
+}
+
+h1 {
+	font-size: 1.25rem;
+	margin: 1.25rem 1rem;
 }
 
 h2 {
@@ -74,8 +74,10 @@ h2 {
 	text-transform: uppercase;
 	font-size: .8rem;
 	padding-left: 1rem;
+	margin: .25rem 0;
 }
 
 p {
 	padding-left: 1rem;
+	margin: 0;
 }
